--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(prog_np)
 cmake_minimum_required(VERSION 2.8)
 aux_source_directory(. SRC_LIST)
-set(CMAKE_C_FLAGS "-g -Wall")
+set(CMAKE_C_FLAGS "-std=gnu11 -g -Wall")
 
 add_executable(${PROJECT_NAME} ${SRC_LIST})
 
